--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
 
 <div id="data">
 
-
-{% for key, value in users.items() %}
+{% for user in users %}
+	{% for key, value in user.items() %}
       <h1>Key: {{key}}</h1>
       <h2>Value: {{value}}</h2>
+	{% endfor %}
 {% endfor %}
-
 </div>
