--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,6 @@
-<title>Server Send Events Demo</title>
-
-
-
-<h2>Chat Messages</h2>
-
-<div id="data">
-
-{% for user in users %}
-	{% for key, value in user.items() %}
-      <h1>Key: {{key}}</h1>
-      <h2>Value: {{value}}</h2>
-	{% endfor %}
-{% endfor %}
-</div>
+<!doctype html>
+<html>
+<body>
+    <p><a href="/messages">Check out this cool form!</a></p>
+</body>
+</html>
