--- a/templates/messages.html
+++ b/templates/messages.html
@@ -8,7 +8,7 @@
 
         $(document).ready(function() {
 
-            var socket = io.connect("http://127.0.0.1:5000/test");
+            var socket = io.connect("https://flaskappprogram.herokuapp.com/test");
             // Event handler for new connections.
             // The callback function is invoked when a connection with the
             // server is established.
