--- a/templates/messages.html
+++ b/templates/messages.html
@@ -4,12 +4,29 @@
 <script src="{{ url_for('static', filename='jquery.js') }}"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 <script>
-        $(document).ready(function() {
-            var socket = io.connect("https://flaskappprogram.herokuapp.com/test");
-            socket.on('my_response', function(msg) {
-                $("#data").append( "<div class=\"container\"><p>"+msg.text+"</p><span class = \".time-right\">"+msg.user+"</span></div>");
-            });
-        });
+var users = [];
+
+var auto_refresh = setInterval(
+  function() {
+    $.post('/messages').done(function(reply) {
+        var obj = (JSON.parse(reply));
+        for(var key in obj) {
+          var value = obj[key];
+          if( key in users){
+        if (users[key].length != value.length){
+          for (var index = 0+users[key].length; index < value.length; index++) { 
+            $("#data").append( "<div class=\"container\"><p>"+value[index]+"</p><span class = \".time-right\">"+key+"</span></div>");
+                }
+            }
+        }else{
+          for (var index = 0; index < value.length; index++) { 
+            $("#data").append( "<div class=\"container\"><p>"+value[index]+"</p><span class = \".time-right\">"+key+"</span></div>");
+                }
+        }
+          users[key]=value;
+        }
+    });
+  }, 1000);
 
 </script>
 <p><a href="/">Home</a></p>
