--- a/templates/messages.html
+++ b/templates/messages.html
@@ -4,29 +4,16 @@
 <script src="{{ url_for('static', filename='jquery.js') }}"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 <script>
-var users = [];
 
-var auto_refresh = setInterval(
-  function() {
-    $.post('/messages').done(function(reply) {
-        var obj = (JSON.parse(reply));
-        for(var key in obj) {
-          var value = obj[key];
-          if( key in users){
-        if (users[key].length != value.length){
-          for (var index = 0+users[key].length; index < value.length; index++) { 
-            $("#data").append( "<div class=\"container\"><p>"+value[index]+"</p><span class = \".time-right\">"+key+"</span></div>");
-                }
-            }
-        }else{
-          for (var index = 0; index < value.length; index++) { 
-            $("#data").append( "<div class=\"container\"><p>"+value[index]+"</p><span class = \".time-right\">"+key+"</span></div>");
-                }
-        }
-          users[key]=value;
-        }
-    });
-  }, 1000);
+var socket = io.connect('http://' + document.domain + ':' + location.port+'/test');
+
+ socket.on('connect', function() {
+                socket.emit('my_event', {data: 'I\'m connected!'});
+            });
+
+  socket.on('my_response', function(msg) {
+                console.log('okay')
+            });
 
 </script>
 <p><a href="/">Home</a></p>
