--- a/templates/messages.html
+++ b/templates/messages.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 <script>
 
-var socket = io.connect('http://' + document.domain + ':' + location.port+'/test');
+var socket = io.connect('https://flaskappprogram.herokuapp.com/test');
 
  socket.on('connect', function() {
                 socket.emit('my_event', {data: 'I\'m connected!'});
