--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,48 +1,187 @@
+::-webkit-scrollbar{
+    width:12px;
+    background-color: #eee;
+}
+::-webkit-scrollbar-thumb{
+    border-width:1px 1px 1px 2px;
+    border-color: #777;
+    background-color: #aaa;
+}
+::-webkit-scrollbar-thumb:hover{
+    border-width: 1px 1px 1px 2px;
+    border-color: #555;
+    background-color: #777;
+}
+::-webkit-scrollbar-track{
+    border-width:0;
+}
+::-webkit-scrollbar-track:hover{
+    border-left: solid 1px #aaa;
+    background-color: #eee;
+}
 body {
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 0 20px;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
-.container {
-  border: 2px solid #dedede;
-  background-color: #f1f1f1;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px 0;
+main {
+    flex: 1 0 auto;
 }
 
-.darker {
-  border-color: #ccc;
-  background-color: #ddd;
+nav {
+    background-color: #ffffff;
 }
 
-.container::after {
-  content: "";
-  clear: both;
-  display: table;
+nav img {
+    margin: 8px 15px;
 }
 
-.container img {
-  float: left;
-  max-width: 60px;
-  width: 100%;
-  margin-right: 20px;
-  border-radius: 50%;
+
+#chat-messages {
+    min-height: 10vh;
+    height: 65vh;
+    width: 100%;
+    overflow-y: auto;
+
+}
+#groupList{
+    min-height: 10vh;
+    height: 65vh;
+    width: 100%;
+    overflow-y: auto;
+}
+#userList{
+    margin-top: 20px;
+    min-height: 10vh;
+    height: 45vh;
+    width: 100%;
+    overflow-y: auto;
 }
 
-.container img.right {
-  float: right;
-  margin-left: 20px;
-  margin-right:0;
+#signup{
+    height: 60vh;
+    width: 20%;
 }
 
-.time-right {
-  float: right;
-  color: #aaa;
+#menuContent{
+    background-color:#303e45;
+    width: 30%;
+    height: 65vh;
+    border-left: 5px solid #171d21;
+    overflow-y: auto;
 }
 
-.time-left {
-  float: left;
-  color: #999;
+#profile{
+    height: 50vh;
+
+    margin: 0 auto;
+    border: 2px solid #26a69a;
+}
+.searchclass{
+    margin-top: 2vh;
+}
+
+.burger_trigger{
+    right: 10px;
+    position: absolute;
+    top: 5px;
+    width: 50px;
+    cursor: pointer;
+
+}
+.menu,.menu_opened{
+    top: 0;
+    right: 2px;
+    display: none;
+    padding-top: 60px;
+    cursor: pointer;
+    position: absolute;
+    z-index: 150;
+
+}
+.menu_opened li{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 5px;
+    background-color:#73A0E8;
+}
+.menu_opened li:hover{
+    background-color: white;
+    color: black;
+}
+.menu_opened {
+    display: block;
+}
+
+#profileIcon{
+    width: 30vh;
+    margin-right: 20px;
+}
+#userLogin,#userUsername,#userEmail{
+    font-size: 25px;
+}
+#userLogin:before {
+    content: 'Login: ';
+}
+#userEmail:before{
+    content: 'Email: ';
+}
+#userUsername:before{
+    content: 'Username: ';
+}
+#showGroupListMob{
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    #signup,#modChange{
+        width: 80%;
+    }
+    .brand-logo{
+        margin-left: 60px;
+        font-size: 10px;
+    }
+    .mobileGlist{
+        display: none;
+    }
+    #showGroupListMob{
+        display: block;
+    }
+    .burger_trigger{
+        top: 5px;
+        width: 45px;
+    }
+    .menu,.menu_opened{
+        top:55px;
+        padding-top: 0px;
+        margin-top: 0;
+        z-index: 100;
+    }
+    #profile{
+        width: 90%;
+        height: 90%;
+    }
+    #userLogin,#userUsername,#userEmail{
+        font-size: 15px;
+    }
+    #profileIcon{
+        width: 100%;
+        height: 100%;
+    }
+    #menuContent{
+        width: 100%;
+        position: absolute;
+        z-index: 100;
+        border-left: 0;
+    }
+}
+@media only screen and (max-width: 900px) {
+    #menuContent{
+        width: 100%;
+        position: absolute;
+        border-left: 0;
+        height: 100%;
+    }
 }
