--- a/templates/messages.html
+++ b/templates/messages.html
@@ -14,7 +14,11 @@
 	});
 
 	socket.on('my_response', function(msg) {
-		$("#"+msg.user_nick).append( "<div class=\"container\"><p>"+msg.message_text+"</p><span class = \".time-right\">"+msg.user_name+"</span></div>");
+		$("#"+msg.user_nick).append("<div class=\"chip\" >"+msg.user_nick+":</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
+
+	});
+	ocket.on('bot_msg', function(msg) {
+		$("#"+msg.user_nick).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
 
 	});
 
@@ -32,6 +36,7 @@
 
 	function send_message(obj){
 		socket.emit('send_message', {username: obj.id.split('_form')[0], message_text: obj.msg_text.value});
+		obj.msg_text.value='';
 	};
 	 function burger() {
             $('.menu').toggleClass('menu_opened');
@@ -41,6 +46,7 @@
                 event.stopPropagation();
             });
         };
+
 
 </script>
 <body class="blue-grey darken-4">
@@ -73,10 +79,11 @@
 					<div id="chat-messages" class="card-content blue-grey darken-3 ">
 						{% for key,val in messages.items() %}
 						<div id="{{key}}" style="display:none;">
-							{% for x in val %}
-							<div class="chip" >{{key}}:</div><div class = "white-text">{{x}}</div><br>
-							
-							{%endfor%}
+								{% for x in val %}
+								{% for key1,val1 in x.items() %}
+								<div class="chip" >{{key1}}:</div><div class = "white-text">{{val1}}</div><br>
+								{%endfor%}
+								{%endfor%}
 						</div>	
 						{%endfor%}
 					</div>
@@ -94,7 +101,7 @@
 		</div>
 		<div class="row" id="buts_send">
 			{% for key,val in messages.items() %}
-			<form onsubmit="send_message(this)"  id="{{key}}_form" style="display:none;">
+			<form onsubmit="send_message(this); return false;"  id="{{key}}_form" class = "send_forms" style="display:none;">
 				<div class="input-field white-text col l8 offset-l2 offset-m4 s8">
 					<input type="text" name="msg_text"></div>
 					<div class="input-field col l4 offset-l2 offset-m4 s4">
