--- a/templates/messages.html
+++ b/templates/messages.html
@@ -32,8 +32,7 @@
 		$('#'+user_but.id).show();
 		$('#'+user_but.id+'_form').show();
 
-		var pane = document.getElementById(user_but.id);
-		pane.scrollTop = pane.offsetHeight;
+   		$('#chat-messages').animate({ scrollTop: $('#'+user_but.id).height() }, "slow");
 
 	};
 
@@ -79,7 +78,7 @@
 				<div class="card horizontal">
 					<div id="chat-messages" class="card-content blue-grey darken-3 ">
 						{% for key,val in messages.items() %}
-						<div id="{{key}}" style="display:none;">
+						<div id="{{key}}" style="display:none; overflow:auto">
 								{% for x in val %}
 								{% for key1,val1 in x.items() %}
 								<div class="chip" >{{key1}}:</div><div class = "white-text">{{val1}}</div><br>
