--- a/templates/messages.html
+++ b/templates/messages.html
@@ -14,10 +14,12 @@
 	});
 
 	socket.on('my_response', function(msg) {
-		$("#"+msg.user_nick).append("<div class=\"chip\" >"+msg.user_nick+":</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
+		$('#chat-messages').animate({ scrollTop: $('#'+msg.user_nick).height() }, "slow");
+		$("#"+msg.user_nick).append("<div class=\"chip\" >"+msg.user_name+":</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
 
 	});
 	socket.on('bot_msg', function(msg) {
+		$('#chat-messages').animate({ scrollTop: $('#'+msg.user_nick).height() }, "slow");
 		$("#"+msg.user_nick).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
 
 	});
