--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Server Send Events Demo</title>
+<title>Messages</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
