stat and mailling

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -93,9 +93,9 @@
             <img src="{{ url_for('static', filename='img/menuIcon.png') }}""  class = "burger_trigger" alt="" onclick='burger()'>
             <ul class="menu"  onclick='burger()'>
                 <li><a class="white-text" href="/messages">Сообщения</a></li>
-                <li><a class="white-text" href="/">Статистика</a></li>
-                <li><a class="white-text" href="/">Рассылка</a></li>
-            </ul>і
+                <li><a class="white-text" href="/statistics">Статистика</a></li>
+                <li><a class="white-text" href="/mailing">Рассылка</a></li>
+            </ul>
 
 
 				</div>
