--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -7,6 +7,20 @@
 <script src="{{ url_for('static', filename='jquery.js') }}"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 <script>
+
+	var socket = io.connect('https://flaskappprogram.herokuapp.com/test');
+
+	socket.on('connect', function() {
+		socket.emit('my_event', {data: 'I\'m connected!'});
+	});
+
+	socket.on('statistics', function(msg) {
+		msg.lesson_id
+		$('#chat-messages').animate({ scrollTop: $('#'+msg.user_nick).height() }, "slow");
+		$("#"+msg.user_nick).append("<div class=\"chip\" >"+msg.user_name+":</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
+
+	});
+
 	function burger() {
             $('.menu').toggleClass('menu_opened');
             $(document).click(function(event) {
@@ -33,11 +47,22 @@
 			<div class="card horizontal">
 					<div id="chat-messages" class="card-content blue-grey darken-3 ">
 						<div >
-								<div class = "white-text"><div class="chip" >5</div>Урок №1</div><br>
-								<div class = "white-text"><div class="chip" >7</div>Урок №2</div><br>
-								<div class = "white-text"><div class="chip" >2</div>Урок №3</div><br>
-								<div class = "white-text"><div class="chip" >4</div>Урок №4</div><br>
-								<div class = "white-text"><div class="chip" >8</div>Урок №5</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[0]}}</div>Урок №1</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[1]}}</div>Урок №2</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[2]}}</div>Урок №3</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[3]}}</div>Урок №4</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[4]}}</div>Урок №5</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[5]}}</div>Урок №6</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[6]}}</div>Урок №7</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[7]}}</div>Урок №8</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[8]}}</div>Урок №9</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[9]}}</div>Урок №10</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[10]}}</div>Урок №11</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[11]}}</div>Урок №12</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[12]}}</div>Урок №13</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[13]}}</div>Урок №14</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[14]}}</div>Урок №15</div><br>
+								<div class = "white-text"><div class="chip" >{{mas[15]}}</div>Урок №16</div><br>
 						</div>	
 
 					</div>
