--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -15,9 +15,9 @@
 	});
 
 	socket.on('statistics', function(msg) {
-		console.log(msg.lesson_id)
+		console.log($("#les"+msg.lesson_id))
 		var x = $("#les"+msg.lesson_id).text()
-		$("#les"+msg.lesson_id).innerHTML=parseInt(x)+1;
+		$("#les"+msg.lesson_id).html=parseInt(x)+1;
 
 	});
 
