--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -40,12 +40,12 @@
 	</header>
 	<main>
 		<div class="col 12 ">
-		<div class="row align-middle">
-		<div >
+		<div class="row align-middle ">
+		<div class="col 12 ">
 			<h2  class="brand-logo white-text">Статистика тестів:</h2>
 			<div class="card horizontal">
 					<div id="chat-messages" class="card-content blue-grey darken-3 ">
-						<div class="col 6">
+						<div class="card-content col 6">
 								<div class = "white-text"><div class="chip" id="les1">{{mas[0]}}</div>Тест №1</div><br>
 								<div class = "white-text"><div class="chip" id="les2">{{mas[1]}}</div>Тест №2</div><br>
 								<div class = "white-text"><div class="chip" id="les3">{{mas[2]}}</div>Тест №3</div><br>
@@ -55,7 +55,7 @@
 								<div class = "white-text"><div class="chip" id="les7">{{mas[6]}}</div>Тест №7</div><br>
 								<div class = "white-text"><div class="chip" id="les8">{{mas[7]}}</div>Тест №8</div><br>
 							</div>
-							<div class="col 6">
+							<div class="card-content col 6">
 								<div class = "white-text"><div class="chip" id="les9">{{mas[8]}}</div>Тест №9</div><br>
 								<div class = "white-text"><div class="chip" id="les10">{{mas[9]}}</div>Тест №10</div><br>
 								<div class = "white-text"><div class="chip" id="les11">{{mas[10]}}</div>Тест №11</div><br>
