--- a/templates/messages.html
+++ b/templates/messages.html
@@ -24,6 +24,11 @@
 
 	});
 
+	socket.on('newUserInBot', function(msg) {
+		$("#data").append("<div class=\"input-field col s12\"><input  class=\"waves-effect waves-light btn users_but col s12\" type=\"button\" onclick=\""+msg.user_name+"\" value=\""+msg.first_name+"\"></div><br>");
+
+	});
+
 	socket.on('connected', function(msg) {
 		console.log('connected');
 	});
