--- a/templates/messages.html
+++ b/templates/messages.html
@@ -26,7 +26,7 @@
 
 	socket.on('newUserInBot', function(msg) {
 		console.log("New user in bot")
-		$("#data").append("<div class=\"input-field col s12\"><input  class=\"waves-effect waves-light btn users_but col s12\" type=\"button\" onclick=\""+msg.user_name+"\" value=\"getUserMSG(this,"+msg.first_name+")\"></div><br>");
+		$("#data").append("<div class=\"input-field col s12\"><input  class=\"waves-effect waves-light btn users_but col s12\" type=\"button\" onclick=\"getUserMSG(this,"+msg.user_name+")\" value=\""+msg.first_name+"\"></div><br>");
 
 	});
 
@@ -70,7 +70,7 @@
 		<div class="row">
 			<div class="col l2 m4 s8 mobileGlist">
 				<div class="card horizontal blue-grey darken-3">
-					<div id="data" class="card-content blue-grey darken-3 col s12" style="overflow:auto">
+					<div id="data" class="card-content blue-grey darken-3 col s12">
 						{% for key,val in users.items() %}
 						<div class="input-field col s12">
 						<input  class="waves-effect waves-light btn users_but col s12" type="button" onclick="getUserMSG(this,{{key}})" value="{{val}}">
