--- a/templates/messages.html
+++ b/templates/messages.html
@@ -14,19 +14,19 @@
 	});
 
 	socket.on('my_response', function(msg) {
-		$('#chat-messages').animate({ scrollTop: $('#'+msg.user_nick).height() }, "slow");
-		$("#"+msg.user_nick).append("<div class=\"chip\" >"+msg.user_name+":</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
+		$('#chat-messages').animate({ scrollTop: $('#'+msg.user_id).height() }, "slow");
+		$("#"+msg.user_id).append("<div class=\"chip\" >"+msg.user_name+":</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
 
 	});
 	socket.on('bot_msg', function(msg) {
-		$('#chat-messages').animate({ scrollTop: $('#'+msg.user_nick).height() }, "slow");
-		$("#"+msg.user_nick).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
+		$('#chat-messages').animate({ scrollTop: $('#'+msg.user_id).height() }, "slow");
+		$("#"+msg.user_id).append("<div class=\"chip\" >Бот:</div><div class = \"white-text\">"+msg.message_text+"</div><br>");
 
 	});
 
 	socket.on('newUserInBot', function(msg) {
 		console.log("New user in bot")
-		$("#data").append("<div class=\"input-field col s12\"><input  class=\"waves-effect waves-light btn users_but col s12\" type=\"button\" onclick=\"getUserMSG(this,"+msg.user_name+")\" value=\""+msg.first_name+"\"></div><br>");
+		$("#data").append("<div class=\"input-field col s12\"><input  class=\"waves-effect waves-light btn users_but col s12\" type=\"button\" onclick=\"getUserMSG(this,"+msg.user_id+")\" value=\""+msg.first_name+"\"></div><br>");
 
 	});
 
@@ -45,7 +45,7 @@
 	};
 
 	function send_message(obj){
-		socket.emit('send_message', {username: obj.id.split('_form')[0], message_text: obj.msg_text.value});
+		socket.emit('send_message', {user_id: obj.id.split('_form')[0], message_text: obj.msg_text.value});
 		obj.msg_text.value='';
 	};
 	 function burger() {
