--- a/templates/mailing.html
+++ b/templates/mailing.html
@@ -30,7 +30,7 @@
 	<header>
 		<nav class="row blue-grey darken-3">
 			<div class="nav-wrapper col m10 s12">
-				<a href="/" class="brand-logo col s8 offset-s4 m4">Диплом</a>
+				<a href="/" class="brand-logo col s8 offset-s4 m4">Learn Python</a>
 			</div>
 
 		</nav>
@@ -41,7 +41,7 @@
 
 			<form method="POST" onsubmit="send_messages(this); return false;">
 				<div class="nav-wrapper col m10 s12">
-				<h2  class="brand-logo col s8 offset-s4 m4 white-text">Рассылка</h2>
+				<h2  class="brand-logo col s8 offset-s4 m4 white-text">Розсилка</h2>
 			</div>
 				<div class="input-field white-text col l8 offset-l2 offset-m4 s8">
 					<input type="text" name="msg_text"></div>
@@ -53,9 +53,9 @@
             </div>
             <img src="{{ url_for('static', filename='img/menuIcon.png') }}""  class = "burger_trigger" alt="" onclick='burger()'>
             <ul class="menu"  onclick='burger()'>
-                <li><a class="white-text" href="/messages">Сообщения</a></li>
+                <li><a class="white-text" href="/messages">Повідомлення</a></li>
                 <li><a class="white-text" href="/statistics">Статистика</a></li>
-                <li><a class="white-text" href="/mailing">Рассылка</a></li>
+                <li><a class="white-text" href="/mailing">Розсилка</a></li>
             </ul>
 
 
