--- a/templates/messages.html
+++ b/templates/messages.html
@@ -45,8 +45,6 @@
 	};
 
 	function send_message(obj){
-		console.log(obj.id.split('_form')[0])
-		console.log(obj.msg_text.value)
 		socket.emit('send_message', {user_id: obj.id.split('_form')[0], message_text: obj.msg_text.value});
 		obj.msg_text.value='';
 	};
@@ -63,7 +61,7 @@
 	<header>
 		<nav class="row blue-grey darken-3">
 			<div class="nav-wrapper col m10 s12">
-				<a href="/" class="brand-logo col s8 offset-s4 m4">Диплом</a>
+				<a href="/" class="brand-logo col s8 offset-s4 m4">Learn Python</a>
 			</div>
 
 		</nav>
@@ -100,9 +98,9 @@
             </div>
             <img src="{{ url_for('static', filename='img/menuIcon.png') }}""  class = "burger_trigger" alt="" onclick='burger()'>
             <ul class="menu"  onclick='burger()'>
-                <li><a class="white-text" href="/messages">Сообщения</a></li>
+                <li><a class="white-text" href="/messages">Повідомлення</a></li>
                 <li><a class="white-text" href="/statistics">Статистика</a></li>
-                <li><a class="white-text" href="/mailing">Рассылка</a></li>
+                <li><a class="white-text" href="/mailing">Розсилка</a></li>
             </ul>
 
 
