--- a/templates/slide-side-panel/css/left-nav-style.css
+++ b/templates/slide-side-panel/css/left-nav-style.css
@@ -1,195 +1,9 @@
-::-webkit-scrollbar{
-    width:12px;
-    background-color: #eee;
-}
-::-webkit-scrollbar-thumb{
-    border-width:1px 1px 1px 2px;
-    border-color: #777;
-    background-color: #aaa;
-}
-::-webkit-scrollbar-thumb:hover{
-    border-width: 1px 1px 1px 2px;
-    border-color: #555;
-    background-color: #777;
-}
-::-webkit-scrollbar-track{
-    border-width:0;
-}
-::-webkit-scrollbar-track:hover{
-    border-left: solid 1px #aaa;
-    background-color: #eee;
-}
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
+@charset "UTF-8";
 
-main {
-    flex: 1 0 auto;
-}
-
-nav {
-    background-color: #ffffff;
-}
-
-nav img {
-    margin: 8px 15px;
-}
-
-#data{
-    min-height: 10vh;
-    max-height: 65vh;
-    overflow-y: auto;
-
-}
-#chat-messages {
-    min-height: 10vh;
-    height: 65vh;
-    width: 100%;
-    overflow-y: auto;
-
-}
-#groupList{
-    min-height: 10vh;
-    height: 65vh;
-    width: 100%;
-    overflow-y: auto;
-}
-#userList{
-    margin-top: 20px;
-    min-height: 10vh;
-    height: 45vh;
-    width: 100%;
-    overflow-y: auto;
-}
-
-#signup{
-    height: 60vh;
-    width: 20%;
-}
-
-#menuContent{
-    background-color:#303e45;
-    width: 30%;
-    height: 65vh;
-    border-left: 5px solid #171d21;
-    overflow-y: auto;
-}
-
-#profile{
-    height: 50vh;
-
-    margin: 0 auto;
-    border: 2px solid #26a69a;
-}
-.searchclass{
-    margin-top: 2vh;
-}
-
-.burger_trigger{
-    right: 10px;
-    position: absolute;
-    top: 5px;
-    width: 50px;
-    cursor: pointer;
-
-}
-.menu,.menu_opened{
-    top: 0;
-    right: 2px;
-    display: none;
-    padding-top: 60px;
-    cursor: pointer;
-    position: absolute;
-    z-index: 150;
-
-}
-.menu_opened li{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 5px;
-    background-color:#73A0E8;
-}
-.menu_opened li:hover{
-    background-color: white;
-    color: black;
-}
-.menu_opened {
-    display: block;
-}
-
-#profileIcon{
-    width: 30vh;
-    margin-right: 20px;
-}
-#userLogin,#userUsername,#userEmail{
-    font-size: 25px;
-}
-#userLogin:before {
-    content: 'Login: ';
-}
-#userEmail:before{
-    content: 'Email: ';
-}
-#userUsername:before{
-    content: 'Username: ';
-}
-#showGroupListMob{
-    display: none;
-}
-
-@media only screen and (max-width: 600px) {
-    #signup,#modChange{
-        width: 80%;
-    }
-    .brand-logo{
-        margin-left: 60px;
-        font-size: 10px;
-    }
-    .mobileGlist{
-        display: none;
-    }
-    #showGroupListMob{
-        display: block;
-    }
-    .burger_trigger{
-        top: 5px;
-        width: 45px;
-    }
-    .menu,.menu_opened{
-        top:55px;
-        padding-top: 0px;
-        margin-top: 0;
-        z-index: 100;
-    }
-    #profile{
-        width: 90%;
-        height: 90%;
-    }
-    #userLogin,#userUsername,#userEmail{
-        font-size: 15px;
-    }
-    #profileIcon{
-        width: 100%;
-        height: 100%;
-    }
-    #menuContent{
-        width: 100%;
-        position: absolute;
-        z-index: 100;
-        border-left: 0;
-    }
-}
-@media only screen and (max-width: 900px) {
-    #menuContent{
-        width: 100%;
-        position: absolute;
-        border-left: 0;
-        height: 100%;
-    }
-}
+/**
+ * Переключаемая боковая панель навигации
+ * выдвигающаяся по клику слева
+ */
 
 .nav {
     /*  ширна произвольная, не стесняйтесь экспериментировать */
@@ -201,14 +15,14 @@ nav img {
     top: 0;
     bottom: 0;
     margin: 0;
-    /* сдвигаем (прячем) панель относительно правого края страницы */
-    right: -320px;
+    /* сдвигаем (прячем) панель относительно левого края страницы */
+    left: -320px;
     /* внутренние отступы */
     padding: 15px 20px;
     /* плавный переход смещения панели */
-    -webkit-transition: right 0.3s;
-    -moz-transition: right 0.3s;
-    transition: right 0.3s;
+    -webkit-transition: left 0.3s;
+    -moz-transition: left 0.3s;
+    transition: left 0.3s;
     /* определяем цвет фона панели */
     background: #16a085;
     /* поверх других элементов */
@@ -224,8 +38,8 @@ nav img {
 .nav-toggle {
     /* абсолютно позиционируем */
     position: absolute;
-    /* относительно правого края панели */
-    right: 320px;
+    /* относительно левого края панели */
+    left: 320px;
     /* отступ от верхнего края панели */
     top: 1em;
     /* внутренние отступы */
@@ -298,10 +112,10 @@ nav img {
  */
 
 [id='nav-toggle']:checked ~ .nav {
-    right: 0;
-    box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
-    -moz-box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
-    -webkit-box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
+    left: 0;
+    box-shadow:4px 0px 20px 0px rgba(0,0,0, 0.5);
+    -moz-box-shadow:4px 0px 20px 0px rgba(0,0,0, 0.5);
+    -webkit-box-shadow:4px 0px 20px 0px rgba(0,0,0, 0.5);
     overflow-y: auto;
 }
 
@@ -313,9 +127,9 @@ nav img {
 */
 
 [id='nav-toggle']:checked ~ main > article {
-    -webkit-transform: translateX(-320px);
-    -moz-transform: translateX(-320px);
-    transform: translateX(-320px);
+    -webkit-transform: translateX(320px);
+    -moz-transform: translateX(320px);
+    transform: translateX(320px);
 }
 
 
@@ -433,10 +247,10 @@ body {
 .nav > ul > li {
     line-height: 2.5;
     opacity: 0;
-    -webkit-transform: translateX(50%);
-    -moz-transform: translateX(50%);
-    -ms-transform: translateX(50%);
-    transform: translateX(50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
     -webkit-transition: opacity .5s .1s, -webkit-transform .5s .1s;
     -moz-transition: opacity .5s .1s, -moz-transform .5s .1s;
     -ms-transition: opacity .5s .1s, -ms-transform .5s .1s;
@@ -506,11 +320,20 @@ body {
 }
 
 
+/**
+ * состояние ссылок меню при наведении
+ */
+
 .nav > ul > li > a:hover,
 .nav > ul > li > a:focus {
     color: white;
     padding-left: 15px;
 }
+
+
+/**
+ * линия подчеркивания ссылок меню
+ */
 
 .nav > ul > li > a:before {
     content: '';
@@ -537,6 +360,12 @@ body {
     transition: width .5s ease;
 }
 
+
+/**
+ * анимируем линию подчеркивания 
+ * ссылок при наведении
+ */
+
 .nav > ul > li > a:hover:before {
     width: 0%;
     background: #3bc1a0;
@@ -550,3 +379,32 @@ body {
     -webkit-transition: width 0s ease;
     transition: width 0s ease;
 }
+
+
+/* фон затемнения на основной контент 
+ * при этом элементы блокируютя
+ * спорная такая фича, если оно вам надо
+ * просто раскомментируйте
+*/
+
+/*
+.mask-content {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    visibility: hidden;
+    opacity: 0;
+}
+
+[id='nav-toggle']:checked ~ .mask-content {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: opacity .5s, visibility .5s;
+    transition: opacity .5s, visibility .5s;
+}
+*/
