--- a/templates/slide-side-panel/css/right-nav-style.css
+++ b/templates/slide-side-panel/css/right-nav-style.css
@@ -1,195 +1,9 @@
-::-webkit-scrollbar{
-    width:12px;
-    background-color: #eee;
-}
-::-webkit-scrollbar-thumb{
-    border-width:1px 1px 1px 2px;
-    border-color: #777;
-    background-color: #aaa;
-}
-::-webkit-scrollbar-thumb:hover{
-    border-width: 1px 1px 1px 2px;
-    border-color: #555;
-    background-color: #777;
-}
-::-webkit-scrollbar-track{
-    border-width:0;
-}
-::-webkit-scrollbar-track:hover{
-    border-left: solid 1px #aaa;
-    background-color: #eee;
-}
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
+@charset "UTF-8";
 
-main {
-    flex: 1 0 auto;
-}
-
-nav {
-    background-color: #ffffff;
-}
-
-nav img {
-    margin: 8px 15px;
-}
-
-#data{
-    min-height: 10vh;
-    max-height: 65vh;
-    overflow-y: auto;
-
-}
-#chat-messages {
-    min-height: 10vh;
-    height: 65vh;
-    width: 100%;
-    overflow-y: auto;
-
-}
-#groupList{
-    min-height: 10vh;
-    height: 65vh;
-    width: 100%;
-    overflow-y: auto;
-}
-#userList{
-    margin-top: 20px;
-    min-height: 10vh;
-    height: 45vh;
-    width: 100%;
-    overflow-y: auto;
-}
-
-#signup{
-    height: 60vh;
-    width: 20%;
-}
-
-#menuContent{
-    background-color:#303e45;
-    width: 30%;
-    height: 65vh;
-    border-left: 5px solid #171d21;
-    overflow-y: auto;
-}
-
-#profile{
-    height: 50vh;
-
-    margin: 0 auto;
-    border: 2px solid #26a69a;
-}
-.searchclass{
-    margin-top: 2vh;
-}
-
-.burger_trigger{
-    right: 10px;
-    position: absolute;
-    top: 5px;
-    width: 50px;
-    cursor: pointer;
-
-}
-.menu,.menu_opened{
-    top: 0;
-    right: 2px;
-    display: none;
-    padding-top: 60px;
-    cursor: pointer;
-    position: absolute;
-    z-index: 150;
-
-}
-.menu_opened li{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 5px;
-    background-color:#73A0E8;
-}
-.menu_opened li:hover{
-    background-color: white;
-    color: black;
-}
-.menu_opened {
-    display: block;
-}
-
-#profileIcon{
-    width: 30vh;
-    margin-right: 20px;
-}
-#userLogin,#userUsername,#userEmail{
-    font-size: 25px;
-}
-#userLogin:before {
-    content: 'Login: ';
-}
-#userEmail:before{
-    content: 'Email: ';
-}
-#userUsername:before{
-    content: 'Username: ';
-}
-#showGroupListMob{
-    display: none;
-}
-
-@media only screen and (max-width: 600px) {
-    #signup,#modChange{
-        width: 80%;
-    }
-    .brand-logo{
-        margin-left: 60px;
-        font-size: 10px;
-    }
-    .mobileGlist{
-        display: none;
-    }
-    #showGroupListMob{
-        display: block;
-    }
-    .burger_trigger{
-        top: 5px;
-        width: 45px;
-    }
-    .menu,.menu_opened{
-        top:55px;
-        padding-top: 0px;
-        margin-top: 0;
-        z-index: 100;
-    }
-    #profile{
-        width: 90%;
-        height: 90%;
-    }
-    #userLogin,#userUsername,#userEmail{
-        font-size: 15px;
-    }
-    #profileIcon{
-        width: 100%;
-        height: 100%;
-    }
-    #menuContent{
-        width: 100%;
-        position: absolute;
-        z-index: 100;
-        border-left: 0;
-    }
-}
-@media only screen and (max-width: 900px) {
-    #menuContent{
-        width: 100%;
-        position: absolute;
-        border-left: 0;
-        height: 100%;
-    }
-}
+/**
+ * Переключаемая боковая панель навигации
+ * выдвигающаяся справа
+ */
 
 .nav {
     /*  ширна произвольная, не стесняйтесь экспериментировать */
@@ -506,11 +320,20 @@ body {
 }
 
 
+/**
+ * состояние ссылок меню при наведении
+ */
+
 .nav > ul > li > a:hover,
 .nav > ul > li > a:focus {
     color: white;
     padding-left: 15px;
 }
+
+
+/**
+ * линия подчеркивания ссылок меню
+ */
 
 .nav > ul > li > a:before {
     content: '';
@@ -537,6 +360,12 @@ body {
     transition: width .5s ease;
 }
 
+
+/**
+ * анимируем линию подчеркивания 
+ * ссылок при наведении
+ */
+
 .nav > ul > li > a:hover:before {
     width: 0%;
     background: #3bc1a0;
@@ -550,3 +379,32 @@ body {
     -webkit-transition: width 0s ease;
     transition: width 0s ease;
 }
+
+
+/* фон затемнения на основной контент 
+ * при этом элементы блокируютя
+ * спорная такая фича, если оно вам надо
+ * просто раскомментируйте
+*/
+
+/*
+.mask-content {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    visibility: hidden;
+    opacity: 0;
+}
+
+[id='nav-toggle']:checked ~ .mask-content {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: opacity .5s, visibility .5s;
+    transition: opacity .5s, visibility .5s;
+}
+*/
