--- a/templates/messages.html
+++ b/templates/messages.html
@@ -58,17 +58,12 @@
         };
 </script>
 <body class="blue-grey darken-4" class="nav">
-	<header>
-		<nav class="row blue-grey darken-3">
-			<div class="nav-wrapper col m10 s12">
-				<a href="/" class="brand-logo col s8 offset-s4 m4">Learn Python</a>
-			</div>
-        <!-- 
+	  <!-- 
     Метка с именем `id` чекбокса в `for` атрибуте
     Символ Unicode 'TRIGRAM FOR HEAVEN' (U+2630)
     Пустой атрибут `onclick` используем для исправления бага в iOS < 6.0
     См: http://timpietrusky.com/advanced-checkbox-hack 
-    -->
+    --><nav class="nav">
         <label for="nav-toggle" class="nav-toggle" onclick></label>
         <!-- 
     Здесь размещаете любую разметку,
@@ -78,11 +73,16 @@
             <a href="/">Learn Python</a> 
         </h2>
         <ul>
-            <li><a href="#1">Один</a>
-            <li><a href="#2">Два</a>
-            <li><a href="#3">Три</a>
-        </ul>
-		</nav>
+            <li><a href="#1">Один</a></li>
+            <li><a href="#2">Два</a></li>
+            <li><a href="#3">Три</a></li>
+        </ul></nav>	
+        <header>
+		<nav class="row blue-grey darken-3">
+			<div class="nav-wrapper col m10 s12">
+				<a href="/" class="brand-logo col s8 offset-s4 m4">Learn Python</a>
+			</div>
+		</nav>	
 	</header>
 	<main>
 		<div class="row">
