--- a/static/css/style.css
+++ b/static/css/style.css
@@ -267,16 +267,6 @@ nav img {
 }
 
 
-/**
- * Скрытый чекбокс (флажок)
- * невидим и недоступен :)
- * имя селектора атрибут флажка
- */
-
-[id='nav-toggle'] {
-    position: absolute;
-    display: none;
-}
 
 
 /**
@@ -285,7 +275,7 @@ nav img {
  * когда навигация раскрыта, распологаем внутри панели
 */
 
-[id='nav-toggle'] ~ .nav > .nav-toggle {
+.nav-toggle:active ~ .nav > .nav-toggle {
     left: auto;
     right: 2px;
     top: 1em;
@@ -297,7 +287,7 @@ nav img {
  * используем псевдокласс:checked
  */
 
-[id='nav-toggle'] ~ .nav {
+.nav-toggle:active ~ .nav {
     right: 0;
     box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
     -moz-box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
@@ -312,7 +302,7 @@ nav img {
  * фишка необязательная, на любителя
 */
 
-[id='nav-toggle'] ~ main > article {
+.nav-toggle:active ~ main > article {
     -webkit-transform: translateX(-320px);
     -moz-transform: translateX(-320px);
     transform: translateX(-320px);
@@ -325,7 +315,7 @@ nav img {
  * вы можете испльзовать любой другой значок
 */
 
-[id='nav-toggle'] ~ .nav > .nav-toggle:after {
+.nav-toggle:active ~ .nav > .nav-toggle:after {
     content: '\2715';
 }
 
@@ -408,7 +398,7 @@ body {
 
 /*плавное появление заголовка (логотипа) при раскрытии панели */
 
-[id='nav-toggle'] ~ .nav h2 {
+.nav-toggle:active ~ .nav h2 {
     opacity: 1;
     transform: scale(1, 1);
     -ms-transform: scale(1, 1);
