--- a/templates/messages.html
+++ b/templates/messages.html
@@ -58,6 +58,7 @@
         };
 </script>
 <body class="blue-grey darken-4" class="nav">
+	<input type="checkbox" id="nav-toggle" hidden checked>
 	  <!-- 
     Метка с именем `id` чекбокса в `for` атрибуте
     Символ Unicode 'TRIGRAM FOR HEAVEN' (U+2630)
