--- a/static/css/style.css
+++ b/static/css/style.css
@@ -267,6 +267,16 @@ nav img {
 }
 
 
+/**
+ * Скрытый чекбокс (флажок)
+ * невидим и недоступен :)
+ * имя селектора атрибут флажка
+ */
+
+[id='nav-toggle'] {
+    position: absolute;
+    display: none;
+}
 
 
 /**
@@ -275,7 +285,7 @@ nav img {
  * когда навигация раскрыта, распологаем внутри панели
 */
 
-.nav-toggle:active ~ .nav > .nav-toggle {
+[id='nav-toggle']:checked ~ .nav > .nav-toggle {
     left: auto;
     right: 2px;
     top: 1em;
@@ -287,7 +297,7 @@ nav img {
  * используем псевдокласс:checked
  */
 
-.nav-toggle:active ~ .nav {
+[id='nav-toggle']:checked ~ .nav {
     right: 0;
     box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
     -moz-box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
@@ -302,7 +312,7 @@ nav img {
  * фишка необязательная, на любителя
 */
 
-.nav-toggle:active ~ main > article {
+[id='nav-toggle']:checked ~ main > article {
     -webkit-transform: translateX(-320px);
     -moz-transform: translateX(-320px);
     transform: translateX(-320px);
@@ -315,7 +325,7 @@ nav img {
  * вы можете испльзовать любой другой значок
 */
 
-.nav-toggle:active ~ .nav > .nav-toggle:after {
+[id='nav-toggle']:checked ~ .nav > .nav-toggle:after {
     content: '\2715';
 }
 
@@ -398,7 +408,7 @@ body {
 
 /*плавное появление заголовка (логотипа) при раскрытии панели */
 
-.nav-toggle:active ~ .nav h2 {
+[id='nav-toggle']:checked ~ .nav h2 {
     opacity: 1;
     transform: scale(1, 1);
     -ms-transform: scale(1, 1);
@@ -433,7 +443,7 @@ body {
     transition: opacity .5s .1s, transform .5s .1s;
 }
 
-[id='nav-toggle'] ~ .nav > ul > li {
+[id='nav-toggle']:checked ~ .nav > ul > li {
     opacity: 1;
     -webkit-transform: translateX(0);
     -moz-transform: translateX(0);
@@ -495,6 +505,10 @@ body {
     transition: color .5s ease, padding .5s ease;
 }
 
+
+/**
+ * состояние ссылок меню при наведении
+ */
 
 .nav > ul > li > a:hover,
 .nav > ul > li > a:focus {
