--- a/templates/messages.html
+++ b/templates/messages.html
@@ -58,7 +58,7 @@
         };
 </script>
 <body class="blue-grey darken-4" class="nav">
-	<input type="checkbox" id="nav-toggle" hidden checked>
+	<input type="checkbox" id="nav-toggle" hidden>
 	  <!-- 
     Метка с именем `id` чекбокса в `for` атрибуте
     Символ Unicode 'TRIGRAM FOR HEAVEN' (U+2630)
@@ -74,9 +74,9 @@
             <a href="/">Learn Python</a> 
         </h2>
         <ul>
-            <li><a href="#1">Один</a></li>
-            <li><a href="#2">Два</a></li>
-            <li><a href="#3">Три</a></li>
+            <li><a href="#1">Повідомлення</a>
+            <li><a href="#2">Статистика</a>
+            <li><a href="#3">Розсилка</a>
         </ul></nav>	
         <header>
 		<nav class="row blue-grey darken-3">
