--- a/templates/messages.html
+++ b/templates/messages.html
@@ -74,9 +74,9 @@
             <a href="/">Learn Python</a> 
         </h2>
         <ul>
-            <li><a href="/messages">Повідомлення</a><br>
-            <li><a href="/statistics">Статистика</a><br>
-            <li><a href="/mailing">Розсилка</a>
+            <li><a href="/messages">Повідомлення</a></li><br>
+            <li><a href="/statistics">Статистика</a></li><br>
+            <li><a href="/mailing">Розсилка</a></li><br>
         </ul></nav>	
         <header>
 		<nav class="row blue-grey darken-3">
