--- a/templates/messages.html
+++ b/templates/messages.html
@@ -59,17 +59,8 @@
 </script>
 <body class="blue-grey darken-4" class="nav">
 	<input type="checkbox" id="nav-toggle" hidden>
-	  <!-- 
-    Метка с именем `id` чекбокса в `for` атрибуте
-    Символ Unicode 'TRIGRAM FOR HEAVEN' (U+2630)
-    Пустой атрибут `onclick` используем для исправления бага в iOS < 6.0
-    См: http://timpietrusky.com/advanced-checkbox-hack 
-    --><nav class="nav">
+    <nav class="nav">
         <label for="nav-toggle" class="nav-toggle" onclick></label>
-        <!-- 
-    Здесь размещаете любую разметку,
-    если это меню, то скорее всего неупорядоченный список <ul>
-    -->
         <h2 class="logo"> 
             <a href="/">Learn Python</a> 
         </h2>
