--- a/templates/messages.html
+++ b/templates/messages.html
@@ -58,6 +58,8 @@
 
 	};
 	function onBackTap(){
+		$('#chat-messages').children().hide();
+		$('#buts_send').children().hide();
 		$('#back_array').remove();
 		$('.mobileGlist').hide();
 		$('#userstab').show();
