--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -51,9 +51,9 @@
 		</nav>
 	</header>
 	<main>
-		<div class="col 12 ">
-		<div class="row align-middle justify-content-center">
-		<div class="col 12 ">
+		<div class="container">
+
+		<div class="row">
 			<h2  class="brand-logo white-text">Статистика тестів:</h2>
 			<div class="card horizontal">
 					<div id="chat-messages" class="card-content blue-grey darken-3 ">
@@ -78,7 +78,7 @@
 						</div>	
 
 					</div>
-            </div>
+
 			
 
 
