--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -57,7 +57,13 @@
 			<h2  class="brand-logo white-text">Статистика тестів:</h2>
 			<div class="card horizontal">
 					<div id="chat-messages" class="card-content blue-grey darken-3 ">
-						<div class="card-content col 6">
+						<div class="collection">
+        					<span  class="collection-item"><span class="new badge" data-badge-caption="просмотра">{{mas[0]}}</span>Тест №1</span>
+        					<span class="collection-item active">Alvin</span>
+       						<span  class="collection-item">Alvin</span>
+        					<span  class="collection-item">Alvin</span>
+      					</div>
+							<!-- <div class="card-content col 6">
 								<div class = "white-text"><div class="chip" id="les1">{{mas[0]}}</div>Тест №1</div><br>
 								<div class = "white-text"><div class="chip" id="les2">{{mas[1]}}</div>Тест №2</div><br>
 								<div class = "white-text"><div class="chip" id="les3">{{mas[2]}}</div>Тест №3</div><br>
@@ -75,14 +81,13 @@
 								<div class = "white-text"><div class="chip" id="les13">{{mas[12]}}</div>Тест №13</div><br>
 								<div class = "white-text"><div class="chip" id="les14">{{mas[13]}}</div>Тест №14</div><br>
 								<div class = "white-text"><div class="chip" id="les15">{{mas[14]}}</div>Тест №15</div><br>
-						</div>	
+							</div>	 -->
 
 					</div>
-
-			
-
-
 		</div>
+
+		 
+
 	</div>
 </div>
 	</main>
